--- a/PortfolioSite.html
+++ b/PortfolioSite.html
@@ -13,18 +13,19 @@
     <title>Portfolio Item - Start Bootstrap Template</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://stckpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="PortfolioSite.css" rel="stylesheet">
 </head>
 
 <body>
+
     <!-- Page Content -->
     <div class="container">
 
         <!-- Portfolio Item Heading -->
-        <h1 class="my-4">IVAN LOPEZ
+        <h1 class="my-4">NAME
             <div class="sub-head">
                 <small>Full Stack Developer</small>
             </div>
@@ -43,7 +44,7 @@
         <h3 class="my-3">Featured Work</h3>
 
         <!-- Related Projects Row -->
-        <div class="row2">
+        <div class="row">
 
             <div class="col-md-4 col-sm-6 mb-4 col-centered">
                 <a href="#">
@@ -83,8 +84,8 @@
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
