--- a/PortfolioSite.html
+++ b/PortfolioSite.html
@@ -13,7 +13,7 @@
     <title>Portfolio Item - Start Bootstrap Template</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="https://stckpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="PortfolioSite.css" rel="stylesheet">
