--- a/PortfolioSite.html
+++ b/PortfolioSite.html
@@ -20,6 +20,32 @@
 </head>
 
 <body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home
+                <span class="sr-only">(current)</span>
+              </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <!-- Page Content -->
     <div class="container">
@@ -31,7 +57,6 @@
             </div>
         </h1>
         <hr>
-
         <!-- Portfolio Item Row -->
         <div class="row">
 
@@ -42,32 +67,33 @@
         </div>
 
         <h3 class="my-3">Featured Work</h3>
+        <hr>
 
         <!-- Related Projects Row -->
         <div class="row">
 
             <div class="col-md-4 col-sm-6 mb-4 col-centered">
                 <a href="#">
-            <img class="imgSmall" src="http://placehold.it/500x300" alt="">
+            <img class="imgSmall" src="C:/Users/telde/Documents/Brackets Projects/Portfoilo Site/images/game-944386_960_720.jpg" alt="">
           </a>
-                <h4 class="ProjectText text-uppercase">PROJECT</h3>
-                    <p class="ProjectText">https://github.com/udacity/Appify</p>
+                <h4 class="ProjectText text-uppercase">Tic-tac-toe</h3>
+                    <p class="ProjectText">https://github.com/CrazyLikeABEE/Tic-Tac-Toe</p>
             </div>
 
             <div class="col-md-4 col-sm-6 mb-4 col-centered">
                 <a href="#">
-            <img class="imgSmall" src="http://placehold.it/500x300" alt="">
+            <img class="imgSmall" src="C:/Users/telde/Documents/Brackets Projects/Portfoilo Site/images/movie-918655_960_720.jpg" alt="">
           </a>
-                <h4 class="ProjectText text-uppercase">PROJECT</h3>
-                    <p class="ProjectText">https://github.com/udacity/Appify</p>
+                <h4 class="ProjectText text-uppercase">Movie Trailer Website</h3>
+                    <p class="ProjectText">https://github.com/CrazyLikeABEE/Movie-Trailer-Site</p>
             </div>
 
             <div class="col-md-4 col-sm-6 mb-4 col-centered">
                 <a href="#">
-            <img class="imgSmall" src="http://placehold.it/500x300" alt="">
+            <img class="imgSmall" src="C:/Users/telde/Documents/Brackets Projects/Portfoilo Site/images/stock-vector-tree-silhouettes-red-maple-sugar-maple-oak-poplar-green-oak-birch-531843925.jpg" alt="">
           </a>
-                <h4 class="ProjectText text-uppercase">PROJECT</h3>
-                    <p class="ProjectText">https://github.com/udacity/Appify</p>
+                <h4 class="ProjectText text-uppercase">BST</h3>
+                    <p class="ProjectText">https://github.com/CrazyLikeABEE/BST</p>
             </div>
         </div>
         <!-- /.row -->
